--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta
+  name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width"
+/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
